--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@lottiefiles/react-lottie-player": "^3.4.7",
+    "axios": "^0.27.2",
     "framer-motion": "^6",
     "loadash": "^1.0.0",
     "next": "12.2.3",
