--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-device-detect": "^2.2.2",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
-    "yarn": "^1.22.19"
+    "yarn": "^1.22.19",
+    "typescript": "^4.1.3"
+
   },
   "devDependencies": {
     "eslint": "8.20.0",
