--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@lottiefiles/react-lottie-player": "^3.4.7",
+    "@vidstack/react": "^0.6.13",
     "axios": "^0.27.2",
     "framer-motion": "^6",
     "loadash": "^1.0.0",
@@ -21,9 +22,9 @@
     "react-device-detect": "^2.2.2",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
-    "yarn": "^1.22.19",
-    "typescript": "^4.1.3"
-
+    "typescript": "^4.1.3",
+    "vidstack": "^0.6.13",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "eslint": "8.20.0",
